feat(media): curate multimedia registry and responsive svgs for DSA, CS Fundamentals, and System Design